# jobintel

./: .env.example  .gitignore  README.md  filters.toml  pyproject.toml
jobintel/: __main__.py  config.py  dedupe.py  emailer.py  filters.py  gui.py  http_utils.py  models.py  storage.py
jobintel/sources/: __init__.py  adzuna.py  arbeitnow.py  jobicy.py  remoteok.py  remotive.py  themuse.py
tests/: test_dedupe.py  test_filters.py  test_sources.py  test_storage.py
